@@ -12,27 +12,30 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.nbt.StringNbtReader;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
-import static net.minecraft.nbt.StringNbtReader.EXPECTED_VALUE;
+import static net.minecraft.nbt.StringNbtReader.EXPECTED_COMPOUND;
 
 public class CompoundNbtTagArgumentType implements ArgumentType<NbtCompound> {
-    private static final Collection<String> EXAMPLES = Arrays.asList("{foo:bar}", "{foo:[aa, bb],bar:15}");
+    private static final CompoundNbtTagArgumentType INSTANCE = new CompoundNbtTagArgumentType();
+    private static final Collection<String> EXAMPLES = List.of("{foo:bar}", "{foo:[aa, bb],bar:15}");
 
     public static CompoundNbtTagArgumentType create() {
-        return new CompoundNbtTagArgumentType();
+        return INSTANCE;
     }
 
     public static NbtCompound get(CommandContext<?> context) {
         return context.getArgument("nbt", NbtCompound.class);
     }
 
+    private CompoundNbtTagArgumentType() {}
+
     @Override
     public NbtCompound parse(StringReader reader) throws CommandSyntaxException {
         reader.skipWhitespace();
         if (!reader.canRead()) {
-            throw EXPECTED_VALUE.createWithContext(reader);
+            throw EXPECTED_COMPOUND.createWithContext(reader);
         }
         StringBuilder b = new StringBuilder();
         int open = 0;
@@ -49,9 +52,9 @@ public class CompoundNbtTagArgumentType implements ArgumentType<NbtCompound> {
         }
         reader.expect('}');
         b.append('}');
-        return StringNbtReader.parse(b.toString()
-                .replace("$", "\u00a7")
-                .replace("\u00a7\u00a7", "$")
+        return StringNbtReader.readCompound(b.toString()
+                .replace("$", "§")
+                .replace("§§", "$")
         );
     }
 
