@@ -5,9 +5,9 @@
 
 package meteordevelopment.meteorclient.systems.modules.combat;
 
-import baritone.api.BaritoneAPI;
 import meteordevelopment.meteorclient.events.packets.PacketEvent;
 import meteordevelopment.meteorclient.events.world.TickEvent;
+import meteordevelopment.meteorclient.pathing.PathManagers;
 import meteordevelopment.meteorclient.settings.*;
 import meteordevelopment.meteorclient.systems.friends.Friends;
 import meteordevelopment.meteorclient.systems.modules.Categories;
@@ -30,13 +30,14 @@ import net.minecraft.entity.Tameable;
 import net.minecraft.entity.mob.EndermanEntity;
 import net.minecraft.entity.mob.ZombifiedPiglinEntity;
 import net.minecraft.entity.passive.AnimalEntity;
-import net.minecraft.entity.passive.LlamaEntity;
 import net.minecraft.entity.passive.WolfEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.item.AxeItem;
 import net.minecraft.item.ItemStack;
-import net.minecraft.item.SwordItem;
+import net.minecraft.item.MaceItem;
+import net.minecraft.item.TridentItem;
 import net.minecraft.network.packet.c2s.play.UpdateSelectedSlotC2SPacket;
+import net.minecraft.registry.tag.ItemTags;
 import net.minecraft.util.Hand;
 import net.minecraft.util.math.Box;
 import net.minecraft.util.math.MathHelper;
@@ -57,7 +58,7 @@ public class KillAura extends Module {
     private final Setting<Weapon> weapon = sgGeneral.add(new EnumSetting.Builder<Weapon>()
         .name("weapon")
         .description("Only attacks an entity when a specified weapon is in your hand.")
-        .defaultValue(Weapon.Both)
+        .defaultValue(Weapon.All)
         .build()
     );
 
@@ -72,6 +73,14 @@ public class KillAura extends Module {
         .name("auto-switch")
         .description("Switches to your selected weapon when attacking the target.")
         .defaultValue(false)
+        .build()
+    );
+
+    private final Setting<Boolean> swapBack = sgGeneral.add(new BoolSetting.Builder()
+        .name("swap-back")
+        .description("Switches to your previous slot when done attacking the target.")
+        .defaultValue(false)
+        .visible(autoSwitch::get)
         .build()
     );
 
@@ -149,10 +158,10 @@ public class KillAura extends Module {
         .build()
     );
 
-    private final Setting<Boolean> ignoreBabies = sgTargeting.add(new BoolSetting.Builder()
-        .name("ignore-babies")
-        .description("Whether or not to attack baby variants of the entity.")
-        .defaultValue(true)
+    private final Setting<EntityAge> mobAgeFilter = sgTargeting.add(new EnumSetting.Builder<EntityAge>()
+        .name("mob-age-filter")
+        .description("Determines the age of the mobs to target (baby, adult, or both).")
+        .defaultValue(EntityAge.Adult)
         .build()
     );
 
@@ -233,33 +242,57 @@ public class KillAura extends Module {
         .build()
     );
 
-    CrystalAura ca = Modules.get().get(CrystalAura.class);
     private final List<Entity> targets = new ArrayList<>();
     private int switchTimer, hitTimer;
     private boolean wasPathing = false;
+    public boolean attacking, swapped;
+    public static int previousSlot;
 
     public KillAura() {
         super(Categories.Combat, "kill-aura", "Attacks specified entities around you.");
     }
 
     @Override
+    public void onActivate() {
+        previousSlot = -1;
+        swapped = false;
+    }
+
+    @Override
     public void onDeactivate() {
         targets.clear();
+        stopAttacking();
     }
 
     @EventHandler
     private void onTick(TickEvent.Pre event) {
-        if (!mc.player.isAlive() || PlayerUtils.getGameMode() == GameMode.SPECTATOR) return;
-        if (pauseOnUse.get() && (mc.interactionManager.isBreakingBlock() || mc.player.isUsingItem())) return;
-        if (onlyOnClick.get() && !mc.options.attackKey.isPressed()) return;
-        if (TickRate.INSTANCE.getTimeSinceLastTick() >= 1f && pauseOnLag.get()) return;
-        if (pauseOnCA.get() && ca.isActive() && ca.kaTimer > 0) return;
-
+        if (!mc.player.isAlive() || PlayerUtils.getGameMode() == GameMode.SPECTATOR) {
+            stopAttacking();
+            return;
+        }
+        if (pauseOnUse.get() && (mc.interactionManager.isBreakingBlock() || mc.player.isUsingItem())) {
+            stopAttacking();
+            return;
+        }
+        if (onlyOnClick.get() && !mc.options.attackKey.isPressed()) {
+            stopAttacking();
+            return;
+        }
+        if (TickRate.INSTANCE.getTimeSinceLastTick() >= 1f && pauseOnLag.get()) {
+            stopAttacking();
+            return;
+        }
+        if (pauseOnCA.get() && Modules.get().get(CrystalAura.class).isActive() && Modules.get().get(CrystalAura.class).kaTimer > 0) {
+            stopAttacking();
+            return;
+        }
         if (onlyOnLook.get()) {
             Entity targeted = mc.targetedEntity;
 
-            if (targeted == null) return;
-            if (!entityCheck(targeted)) return;
+            if (targeted == null || !entityCheck(targeted)) {
+                stopAttacking();
+                return;
+            }
 
             targets.clear();
             targets.add(mc.targetedEntity);
@@ -269,20 +302,19 @@ public class KillAura extends Module {
         }
 
         if (targets.isEmpty()) {
-            if (wasPathing) {
-                BaritoneAPI.getProvider().getPrimaryBaritone().getCommandManager().execute("resume");
-                wasPathing = false;
-            }
+            stopAttacking();
             return;
         }
 
-        Entity primary = targets.get(0);
+        Entity primary = targets.getFirst();
 
         if (autoSwitch.get()) {
             Predicate<ItemStack> predicate = switch (weapon.get()) {
                 case Axe -> stack -> stack.getItem() instanceof AxeItem;
-                case Sword -> stack -> stack.getItem() instanceof SwordItem;
-                case Both -> stack -> stack.getItem() instanceof AxeItem || stack.getItem() instanceof SwordItem;
+                case Sword -> stack -> stack.isIn(ItemTags.SWORDS);
+                case Mace -> stack -> stack.getItem() instanceof MaceItem;
+                case Trident -> stack -> stack.getItem() instanceof TridentItem;
+                case All -> stack -> stack.getItem() instanceof AxeItem || stack.isIn(ItemTags.SWORDS) || stack.getItem() instanceof MaceItem || stack.getItem() instanceof TridentItem;
                 default -> o -> true;
             };
             FindItemResult weaponResult = InvUtils.findInHotbar(predicate);
@@ -292,14 +324,22 @@ public class KillAura extends Module {
                 if (axeResult.found()) weaponResult = axeResult;
             }
 
+            if (!swapped) {
+                previousSlot  = mc.player.getInventory().getSelectedSlot();
+                swapped = true;
+            }
             InvUtils.swap(weaponResult.slot(), false);
         }
 
-        if (!itemInHand()) return;
+        if (!itemInHand()) {
+            stopAttacking();
+            return;
+        }
 
+        attacking = true;
         if (rotation.get() == RotationMode.Always) Rotations.rotate(Rotations.getYaw(primary), Rotations.getPitch(primary, Target.Body));
-        if (pauseOnCombat.get() && BaritoneAPI.getProvider().getPrimaryBaritone().getPathingBehavior().isPathing() && !wasPathing) {
-            BaritoneAPI.getProvider().getPrimaryBaritone().getCommandManager().execute("pause");
+        if (pauseOnCombat.get() && PathManagers.get().isPathing() && !wasPathing) {
+            PathManagers.get().pause();
             wasPathing = true;
         }
 
@@ -313,10 +353,24 @@ public class KillAura extends Module {
         }
     }
 
+    private void stopAttacking() {
+        if (!attacking) return;
+
+        attacking = false;
+        if (wasPathing) {
+            PathManagers.get().resume();
+            wasPathing = false;
+        }
+        if (swapBack.get() && swapped) {
+            InvUtils.swap(previousSlot, false);
+            swapped = false;
+        }
+    }
+
     private boolean shouldShieldBreak() {
         for (Entity target : targets) {
             if (target instanceof PlayerEntity player) {
-                if (player.blockedByShield(mc.world.getDamageSources().playerAttack(mc.player)) && shieldMode.get() == ShieldMode.Break) {
+                if (player.isBlocking() && shieldMode.get() == ShieldMode.Break) {
                     return true;
                 }
             }
@@ -327,7 +381,7 @@ public class KillAura extends Module {
 
     private boolean entityCheck(Entity entity) {
         if (entity.equals(mc.player) || entity.equals(mc.cameraEntity)) return false;
-        if ((entity instanceof LivingEntity && ((LivingEntity) entity).isDead()) || !entity.isAlive()) return false;
+        if ((entity instanceof LivingEntity livingEntity && livingEntity.isDead()) || !entity.isAlive()) return false;
 
         Box hitbox = entity.getBoundingBox();
         if (!PlayerUtils.isWithin(
@@ -342,22 +396,28 @@ public class KillAura extends Module {
         if (!PlayerUtils.canSeeEntity(entity) && !PlayerUtils.isWithin(entity, wallsRange.get())) return false;
         if (ignoreTamed.get()) {
             if (entity instanceof Tameable tameable
-                && tameable.getOwnerUuid() != null
-                && tameable.getOwnerUuid().equals(mc.player.getUuid())
+                && tameable.getOwner() != null
+                && tameable.getOwner().equals(mc.player)
             ) return false;
         }
         if (ignorePassive.get()) {
-            if (entity instanceof EndermanEntity enderman && !enderman.isAngryAt(mc.player)) return false;
-            if (entity instanceof ZombifiedPiglinEntity piglin && !piglin.isAngryAt(mc.player)) return false;
+            if (entity instanceof EndermanEntity enderman && !enderman.isAngry()) return false;
+            if (entity instanceof ZombifiedPiglinEntity piglin && !piglin.isAttacking()) return false;
             if (entity instanceof WolfEntity wolf && !wolf.isAttacking()) return false;
-            if (entity instanceof LlamaEntity llama && !llama.isAttacking()) return false;
         }
         if (entity instanceof PlayerEntity player) {
             if (player.isCreative()) return false;
             if (!Friends.get().shouldAttack(player)) return false;
-            if (shieldMode.get() == ShieldMode.Ignore && player.blockedByShield(mc.world.getDamageSources().playerAttack(mc.player))) return false;
+            if (shieldMode.get() == ShieldMode.Ignore && player.isBlocking()) return false;
         }
-        return !(entity instanceof AnimalEntity animal) || !ignoreBabies.get() || !animal.isBaby();
+        if (entity instanceof AnimalEntity animal) {
+            return switch (mobAgeFilter.get()) {
+                case Baby -> animal.isBaby();
+                case Adult -> !animal.isBaby();
+                case Both -> true;
+            };
+        }
+        return true;
     }
 
     private boolean delayCheck() {
@@ -391,14 +451,16 @@ public class KillAura extends Module {
 
         return switch (weapon.get()) {
             case Axe -> mc.player.getMainHandStack().getItem() instanceof AxeItem;
-            case Sword -> mc.player.getMainHandStack().getItem() instanceof SwordItem;
-            case Both -> mc.player.getMainHandStack().getItem() instanceof AxeItem || mc.player.getMainHandStack().getItem() instanceof SwordItem;
+            case Sword -> mc.player.getMainHandStack().isIn(ItemTags.SWORDS);
+            case Mace -> mc.player.getMainHandStack().getItem() instanceof MaceItem;
+            case Trident -> mc.player.getMainHandStack().getItem() instanceof TridentItem;
+            case All -> mc.player.getMainHandStack().getItem() instanceof AxeItem || mc.player.getMainHandStack().isIn(ItemTags.SWORDS) || mc.player.getMainHandStack().getItem() instanceof MaceItem || mc.player.getMainHandStack().getItem() instanceof TridentItem;
             default -> true;
         };
     }
 
     public Entity getTarget() {
-        if (!targets.isEmpty()) return targets.get(0);
+        if (!targets.isEmpty()) return targets.getFirst();
         return null;
     }
 
@@ -411,7 +473,9 @@ public class KillAura extends Module {
     public enum Weapon {
         Sword,
         Axe,
-        Both,
+        Mace,
+        Trident,
+        All,
         Any
     }
 
@@ -425,5 +489,11 @@ public class KillAura extends Module {
         Ignore,
         Break,
         None
+    }
+
+    public enum EntityAge {
+        Baby,
+        Adult,
+        Both
     }
 }
